--- a/products.html
+++ b/products.html
@@ -1,103 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>landing</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- Morris.js CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="">MY DUKA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!-- Navbar items -->
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="dashboard.html">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sales.html">Sales</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="">MY DUKA</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- Navbar items -->
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="dashboard.html">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sales.html">Sales</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-
-
     <div id="app">
-        <div class="container">
+      <div class="container">
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Add products
+        </button>
 
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Add products
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">product details</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form @submit.prevent="add_product">
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">product Name</label>
-                                    <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
-                                        v-model="product_name" />
-                                </div>
-                                <div class="mb-3">
-                                    <label for="price" class="form-label">Price</label>
-                                    <input type="number" class="form-control" id="price" v-model="product_price" />
-                                </div>
-                                <button type="submit" class="btn btn-primary">ADD</button>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="exampleModal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                  product details
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form @submit.prevent="add_product">
+                  <div class="mb-3">
+                    <label for="name" class="form-label">product Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="name"
+                      aria-describedby="emailHelp"
+                      v-model="product_name"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="price" class="form-label">Price</label>
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="price"
+                      v-model="product_price"
+                    />
+                  </div>
+                  <button type="submit" class="btn btn-primary">ADD</button>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
             </div>
-            <table class="table" id="productsTable">
-                <thead>
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">name</th>
-                        <th scope="col">price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="prod in prods" :key="prod.id">
-                        <td>{{ prod.id }}</td>
-                        <td>{{ prod.name }}</td>
-                        <td>{{ prod.price }}</td>
-                    </tr>
-                </tbody>
-            </table>
+          </div>
         </div>
-
+        <table class="table" id="productsTable">
+          <thead>
+            <tr>
+              <th scope="col">id</th>
+              <th scope="col">name</th>
+              <th scope="col">price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="prod in prods" :key="prod.id">
+              <td>{{ prod.id }}</td>
+              <td>{{ prod.name }}</td>
+              <td>{{ prod.price }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -106,67 +150,91 @@
 
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script>
-
-        Vue.createApp({
-            data() {
-                return {
-                    loading: false,
-                    prods: [],
-                    product_name: null,
-                    product_price: null,
-                    chartRendered: false
-                }
-            },
-            methods: {
-                fetch_products() {
-                    this.loading = true;
-                    axios.get("http://127.0.0.1:5000/products")
-                        .then(response => {
-                            console.log("Response from API", response);
-                            this.prods = response.data;
-                            console.log("This is my products:", this.prods);
-                            this.loading = false;
-                            $(document).ready(function () {
-                                $('#productsTable').DataTable();
-                            });
-                        })
-                        .catch(error => {
-                            console.error("Error fetching data:", error);
-                            this.loading = false;
-                        });
+      Vue.createApp({
+        data() {
+          return {
+            loading: false,
+            prods: [],
+            product_name: null,
+            product_price: null,
+            chartRendered: false,
+          };
+        },
+        methods: {
+          fetch_products() {
+            this.loading = true;
+            axios
+              .get("http://127.0.0.1:5000/products", {
+                headers: {
+                  Authorization: ` ${localStorage.getItem("token")}`,
                 },
-                add_product() {
-                    this.loading = true;
-                    axios.post("http://127.0.0.1:5000/products", {
-                        name: this.product_name,
-                        price: this.product_price
-                    })
-                        .then(response => {
-                            console.log("product added:", response.data);
-                            this.product_name = '';
-                            this.product_price = '';
-                            this.fetch_products();
-                            this.close_modal();
-                        })
-                        .catch(error => {
-                            console.error("Error adding data:", error);
-                            this.loading = false;
-                        });
+              })
+              .then((response) => {
+                console.log("Response from API", response);
+                this.prods = response.data;
+                console.log("This is my products:", this.prods);
+                this.loading = false;
+                $(document).ready(function () {
+                  $("#productsTable").DataTable();
+                });
+              })
+              .catch((error) => {
+                console.error("Error fetching data:", error);
+                this.loading = false;
+              });
+          },
+          add_product() {
+            this.loading = true;
+            axios
+              .post(
+                "http://127.0.0.1:5000/products",
+                {
+                  name: this.product_name,
+                  price: this.product_price,
                 },
-                close_modal() {
-                    $('#exampleModal').modal('hide');
+                {
+                  headers: {
+                    Authorization: `${localStorage.getItem("token")}`,
+                  },
                 }
-            },
-            mounted() {
+              )
+              .then((response) => {
+                console.log("product added:", response.data);
+                this.product_name = "";
+                this.product_price = "";
                 this.fetch_products();
+                this.close_modal();
+              })
+              .catch((error) => {
+                console.error("Error adding data:", error);
+                this.loading = false;
+              });
+          },
+          close_modal() {
+            $("#exampleModal").modal("hide");
+          },
+        },
+        mounted() {
+          const token = localStorage.getItem("token");
+          if (token) {
+            const tokenData = JSON.parse(atob(token.split(".")[1])); 
+
+            const currentTimestamp = Math.floor(Date.now() / 1000); 
+            if (tokenData.exp< currentTimestamp) {
+              window.location.href = "login.html";
+            } else {
+              this.fetch_products();
             }
-        }).mount('#app');
-
-
+          } else {
+            window.location.href = "login.html";
+          }
+        },
+      }).mount("#app");
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
